atelier6/service.yaml
apiVersion: v1 
kind: Service 
metadata:
 name: egtest  
spec: 
  selector:
     app: generatorsvc
  ports:
  - name: http
    port: 81
    targetPort: 80
  - name: ssh 
    port: 22
    targetPort: 22
