atelier6/serviceloadbalancer.yaml
apiVersion: v1 
kind: Service 
metadata:
 name: web-loadbalancer
spec: 
  type: LoadBalancer
  selector:
     app: chuck
  ports:
  - port: 81
    targetPort: 80
