atelier6/serviceloadbalancerexternal.yaml
apiVersion: v1 
kind: Service 
metadata:
 name: web-lb-local 
spec: 
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
     app: generatorsvc
  ports:
  - port: 81
    targetPort: 80
