atelier6/servicenodeport.yaml
kind: Service 
apiVersion: v1
metadata:
 name: web-nodeport 
spec: 
  type: NodePort
  selector:
     app: homesvc
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
